# dalle-pictionary

./: .gitignore  README.md  app.py  pyproject.toml
backend/: app.py
dalle-pictionary/backend/: app.py  sentence_transformer.py  utils.py
dalle-pictionary/backend/tests/: get_image.rest  get_predictions_by_image.rest  predict_similarity.rest  sentence_transformer.py  test.ipynb
dalle-pictionary/db/: crud.py  database.py  models.py  populate.py  schemas.py
dalle-pictionary/db/test/: inspect_tables.sql
dalle-pictionary/frontend/: api_calls.py  app.py
frontend/: app.py
tests/: api_test.rest  get_image.rest
